修改初始化表單號碼程式